TestService/k8s/kafka-ui/kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
  namespace: testservice
spec:
  selector:
    app: kafka-ui
  ports:
    - port: 8080
      targetPort: 8080
  envFrom:
    - configMapRef:
        name: kafka-ui-config
  type: ClusterIP
