TestService/k8s/kafka-ui/kafka-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: testservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /kafka-ui
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
